build: replace Maven with Gradle
refs #141